Fix button color, footer spacing

--- a/assets/styles/base/_elements.scss
+++ b/assets/styles/base/_elements.scss
@@ -15,3 +15,7 @@ tr {
   color: var(--color);
   border-block-end: var(--border--small);
 }
+
+button {
+  color: var(--color);
+}
